Fix checkbox tick alignment and custom select dropdown

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -29,7 +29,7 @@
 
   &::after {
     position: absolute;
-    top: 48%;
+    top: 50%;
     left: 50%;
     width: 0.3rem;
     height: 0.56rem;
